fixed width of tools section on mobile devices

--- a/src/Components/styles/Tools.css
+++ b/src/Components/styles/Tools.css
@@ -70,8 +70,13 @@
 
 @media only screen and (max-width: 550px) {
 
+    .toolsContainer {
+        min-width: 70%;
+    }
+
     .toolSection:not(:last-child) {
         margin: 0;
+        margin-bottom: 1em;
     }
 
     .tech {
